# sb-

./: CMakeLists.txt  README.md  gitattributes  web_build.bat  win_build.bat
modules/: FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
src/: index.html
src/Application/: appdata.h  appdata.h.in  console.c  entry.c
src/Application/ErrorHandling/: err.c  err.h
src/Application/Resources/: resource.rc
src/Graphics/: graphics.c  graphics.h
src/Runtime/: update.c
src/Runtime/Enemy/: enemy.c  enemy.h
src/Runtime/MenuItems/: button.c  button.h  slider.c  slider.h
src/Runtime/Multiplayer/: multiplayer.c  multiplayer.h
src/Runtime/Music/: music.c  music.h
src/Runtime/Player/: Player.c  Player.h
src/Runtime/Scenes/: arena.c  gameover.c  scene.c  scene.h  settingsmenu.c  startanim.c  startmenu.c
src/resources/credits/: credits.txt
